--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -126,9 +126,6 @@
     <ClInclude Include="AssetPathDataBase.h">
       <Filter>头文件\AssetManger</Filter>
     </ClInclude>
-    <ClInclude Include="AssetMangerHub.h">
-      <Filter>头文件\AssetManger</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TextureManger.cpp">
@@ -173,9 +170,6 @@
     <ClCompile Include="Texture.cpp">
       <Filter>源文件\Asset</Filter>
     </ClCompile>
-    <ClCompile Include="AssetMangerHub.cpp">
-      <Filter>源文件\AssetManger</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Metatype.inl">
@@ -196,6 +190,8 @@
     <None Include="IAssetManger.inl">
       <Filter>头文件\AssetManger</Filter>
     </None>
-    <None Include="TestDeserializeSceneOutput.json" />
+    <None Include="TestDeserializeSceneOutput.json">
+      <Filter>源文件\Test</Filter>
+    </None>
   </ItemGroup>
 </Project>
