--- a/Tools/Tools.vcxproj
+++ b/Tools/Tools.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Assert.h" />
     <ClInclude Include="Clock.h" />
     <ClInclude Include="ConcurrentQueue.h" />
     <ClInclude Include="Event.h" />
