--- a/GHL/GHL.vcxproj
+++ b/GHL/GHL.vcxproj
@@ -132,23 +132,27 @@
     <ClInclude Include="Adapter.h" />
     <ClInclude Include="AdapterContainer.h" />
     <ClInclude Include="D3DObject.h" />
+    <ClInclude Include="DebugLayer.h" />
     <ClInclude Include="DescriptorHeap.h" />
     <ClInclude Include="DescriptorTableRange.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="Display.h" />
     <ClInclude Include="Fence.h" />
     <ClInclude Include="pbh.h" />
+    <ClInclude Include="ResourceBarrierBatch.h" />
     <ClInclude Include="RootParameter.h" />
     <ClInclude Include="RootSignature.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Adapter.cpp" />
     <ClCompile Include="AdapterContainer.cpp" />
+    <ClCompile Include="DebugLayer.cpp" />
     <ClCompile Include="DescriptorHeap.cpp" />
     <ClCompile Include="DescriptorTableRange.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="Display.cpp" />
     <ClCompile Include="Fence.cpp" />
+    <ClCompile Include="ResourceBarrierBatch.cpp" />
     <ClCompile Include="RootParameter.cpp" />
     <ClCompile Include="RootSignature.cpp" />
   </ItemGroup>
