--- a/GHL/GHL.vcxproj.filters
+++ b/GHL/GHL.vcxproj.filters
@@ -63,6 +63,21 @@
     <ClInclude Include="Heap.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Shader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderCompiler.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderDesc.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="QueryHeap.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Display.cpp">
@@ -105,6 +120,18 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="pbh.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ShaderCompiler.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="QueryHeap.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Resource.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
