--- a/GHL/GHL.vcxproj
+++ b/GHL/GHL.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Buffer.h" />
     <ClInclude Include="CommandQueue.h" />
     <ClInclude Include="DWParam.h" />
     <ClInclude Include="Adapter.h" />
@@ -145,8 +146,10 @@
     <ClInclude Include="QueryHeap.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="ResourceBarrierBatch.h" />
+    <ClInclude Include="ResourceDesc.h" />
     <ClInclude Include="RootParameter.h" />
     <ClInclude Include="RootSignature.h" />
+    <ClInclude Include="SegregatedPoolHeapAllocator.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderCompiler.h" />
     <ClInclude Include="ShaderDesc.h" />
@@ -154,6 +157,7 @@
   <ItemGroup>
     <ClCompile Include="Adapter.cpp" />
     <ClCompile Include="AdapterContainer.cpp" />
+    <ClCompile Include="Buffer.cpp" />
     <ClCompile Include="CommandQueue.cpp" />
     <ClCompile Include="DebugLayer.cpp" />
     <ClCompile Include="DescriptorHeap.cpp" />
@@ -168,6 +172,7 @@
     <ClCompile Include="ResourceBarrierBatch.cpp" />
     <ClCompile Include="RootParameter.cpp" />
     <ClCompile Include="RootSignature.cpp" />
+    <ClCompile Include="SegregatedPoolHeapAllocator.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderCompiler.cpp" />
   </ItemGroup>
