--- a/GHL/GHL.vcxproj.filters
+++ b/GHL/GHL.vcxproj.filters
@@ -102,6 +102,12 @@
     <ClInclude Include="BuddyResourceAllocation.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="PipelineState.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SwapChain.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Display.cpp">
@@ -177,6 +183,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="BuddyResourceAllocation.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="PipelineState.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ShaderDesc.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SwapChain.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
